1999-05-07  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/channel.[ch]
	* app/commands.c
	* app/gimage_mask.[ch]
	* app/gimage_mask_cmds.c
	* tools/pdbgen/pdb/gimage_mask.pdb
	* app/interface.c: propagated the independent x/y values for
	shrink/grow/border to the interface but not yet to the PDB.

	* app/*_select.c
	* app/paint_funcs.[ch]: implemented indep. x/y feather. It seems
	that cut-and-paste was sufficient, but I didn't really understand
	the code. Jay, could you have a look at this please?

	If the feather/shrink/... amount is specified in pixels,
	everything behaves like before.
	I'm not sure how the built-in feather option of the selection
	tools should behave, so it still defaults to 'pixel' mode.
	Moved the static feather/shrink/... values from gimage_mask.c to
	commands.c because they belong to the interface.

	* app/text_tool_cmds.c
	* tools/pdbgen/pdb/text_tool.pdb: prepared for resolution
	support, but didn't enable it yet.

	* app/unit_cmds.c
	* tool/pdbgen/pdb/unit.pdb: fixed a help text.

Thu May  6 22:51:33 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* app/plug_in.c (plug_in_init_shm): Added this new function.
	Taken from plug_in_init(). No logic is changed.

1999-05-06  Tor Lillqvist  <tml@iki.fi>

	* tools/pdbgen/pdb/gradient_select.pdb: Fix nasty bug, inner block
 	variable "values" shadowed outer one, the inner one was assigned
 	to, the outer one returned.

	* app/gradient_select_cmds.c
 	(gradients_get_gradient_data_invoker): Autogenned from above.

Wed May  5 18:18:16 CEST 1999 Marc Lehmann <pcg@goof.com>

        * configure.in: enabled _NOUI versions of GIMP_CFLAGS and
        GIMP_LIBS.

Wed May  5 14:29:51 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* app/datafiles.c: Add <sys/types.h>.
	* app/patterns.c: <sys/types.h> before <dirent.h>

Wed May  5 12:40:54 MEST 1999 Sven Neumann <sven@gimp.org>

	* Makefile.am
	* app/cursorutil.c: Moved the cursors out of 'pixmaps' into a new