@@ -1,5 +1,14 @@
 1999-05-07  Michael Natterer  <mitschel@cs.tu-berlin.de>
 
+	* app/app_procs.c
+	* app/docindex.[ch]: fill the "last opened" list with
+	the first last_opened_size elements of the docindex.
+
+	* app/preferences_dialog.c: fixed the tile_cache_size and
+	last_opened_size bugs. Now we can change these values again.
+
+1999-05-07  Michael Natterer  <mitschel@cs.tu-berlin.de>
+
 	* app/channel.[ch]
 	* app/commands.c
 	* app/gimage_mask.[ch]
